Fixed position to prevent horizontal scroll

--- a/src/pages/Contact/styles/contact.css
+++ b/src/pages/Contact/styles/contact.css
@@ -73,7 +73,6 @@
     justify-content: space-evenly;
     margin-top: 300px;
     position: relative;
-    left: 35px;
   }
   .heading__info {
     margin-top: 120px;
